# template

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  mkdocs.yaml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: documentation.yml  linting.yml  tests.yml
{{cookiecutter.package_name}}/docs/scripts/: pages_generator.py
{{cookiecutter.package_name}}/scripts/: script.py
{{cookiecutter.package_name}}/src/{{ cookiecutter.module_name }}/: __init__.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  mkdocs.yaml  pyproject.toml
{{cookiecutter.project_name}}/docs/scripts/: pages_generator.py
