[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["grigaut <gaetanrigaut.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "*"}
mypy = "*"
pre-commit = "*"
pre-commit-hooks = "*"

[tool.black]
target-version = ['py311']
line-length = 79
