[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
# Use identifier from https://spdx.org/licenses/
license = "{{ cookiecutter.license }}"
readme = "README.md"

packages = [{ include = "{{cookiecutter.module_name}}", from = "src" }]

[tool.poetry.dependencies]
python = "{{cookiecutter.compatible_python_versions}}"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "*"}
ruff = "*"
mypy = "*"
pre-commit = "*"
pre-commit-hooks = "*"
{% if cookiecutter.include_tests -%}
pytest = "*"
coverage = { extras = ["toml"], version = "*" }
pytest-cov = "*"
pytest-mock = "*"
{% endif -%}
{% if cookiecutter.include_notebooks -%}
ipykernel = "*"
nbstripout = "*"
{% endif -%}
{% if cookiecutter.include_docs %}
[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-autorefs = "*"
mkdocs-material = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-macros-plugin = "*"
{% endif %}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 79

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["ALL"]
ignore = [
    # missing-trailing-comma (COM812)
    "COM812",
    #no-blank-line-before-class
    "D211",
    #multi-line-summary-second-line
    "D213",
    # flake8-boolean-trap
    "FBT",
    # bandit
    "S",
    # flake8-logging
    "G",
    # flake8-print
    "T",
    # McCabe complexity
    "C901",
    # do not assign a lambda expression, use a def
    "E731",
    # implicit-namespace-package
    "INP001",
    # single-line-implicit-string-concatenation
    "ISC001",
    # Too many arguments to function call
    "PLR0913",
    # Missing type annotation for `self` in method
    "ANN101",
    # suppressible-exception
    "SIM105",
]
unfixable = [
    # Remove unused-imports
    "F401",
    # Variable assigned but never used
    "F841",
    # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM118",
    # move to type-checking block
    "TCH003",
    # found comented-out code
    "ERA001",
]
{% if cookiecutter.include_tests %}
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["{{cookiecutter.module_name}}", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.module_name}}"]

[tool.coverage.report]
show_missing = true
{% endif -%}
